[gd_scene load_steps=11 format=3 uid="uid://rwaj7o3a4qqw"]

[ext_resource type="Texture2D" uid="uid://do8er1oxh2lxa" path="res://Sprites em PNG E GIF/Inimigos/ANJO.png" id="1_0tlit"]
[ext_resource type="Script" path="res://Cenas/Inimigos/angel.gd" id="1_l24ko"]
[ext_resource type="PackedScene" uid="uid://brujqoubud5su" path="res://Cenas/Objetos/Angel Sword/Espada do Anjo.tscn" id="2_p3evj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_5pi1u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_da7d5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ys267"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_0af0o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_67p44"]
radius = 6.0
height = 32.0

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_o5syg"]
polygon = PackedVector2Array(3, 0, 7, 0, 7, -1, 6, -1, 6, -2, 8, -2, 8, -4, 7, -4, 7, -5, 6, -5, 6, -6, 5, -6, 5, -7, 4, -7, 4, -9, 6, -9, 6, -10, 7, -10, 7, -13, 8, -13, 8, -14, 10, -14, 10, -13, 11, -13, 11, -12, 12, -12, 12, -11, 13, -11, 13, -10, 14, -10, 14, -9, 15, -9, 15, -10, 16, -10, 16, -18, 15, -18, 15, -19, 14, -19, 14, -20, 13, -20, 13, -21, 12, -21, 12, -22, 10, -22, 10, -23, 5, -23, 5, -22, 4, -22, 4, -23, 3, -23, 3, -25, 4, -25, 4, -26, 5, -26, 5, -27, 6, -27, 6, -30, 5, -30, 5, -31, 4, -31, 4, -32, -4, -32, -4, -31, -5, -31, -5, -30, -6, -30, -6, -27, -5, -27, -5, -26, -4, -26, -4, -25, -3, -25, -3, -23, -4, -23, -4, -22, -5, -22, -5, -23, -10, -23, -10, -22, -12, -22, -12, -21, -13, -21, -13, -20, -14, -20, -14, -19, -15, -19, -15, -18, -16, -18, -16, -10, -15, -10, -15, -9, -14, -9, -14, -10, -13, -10, -13, -11, -12, -11, -12, -12, -11, -12, -11, -13, -10, -13, -10, -14, -8, -14, -8, -13, -7, -13, -7, -10, -6, -10, -6, -9, -4, -9, -4, -7, -5, -7, -5, -6, -6, -6, -6, -5, -7, -5, -7, -4, -8, -4, -8, -2, -6, -2, -6, -1, -7, -1, -7, 0, -3, 0, -3, -1, -2, -1, -2, -2, 2, -2, 2, -1, 3, -1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ky3ij"]
radius = 200.0

[node name="Angel" type="CharacterBody2D" groups=["angel", "enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_l24ko")
sword_scene = ExtResource("2_p3evj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_67p44")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0tlit")
offset = Vector2(0, -16)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_o5syg")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_5pi1u")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_da7d5")
initial_state = NodePath("Chill")

[node name="Chill" type="Node" parent="StateChart/Root"]
script = ExtResource("5_ys267")

[node name="To Sword Chasing" type="Node" parent="StateChart/Root/Chill"]
script = ExtResource("6_0af0o")
to = NodePath("../../Sword Chasing")
event = &"player_entered_vision"
delay_in_seconds = "0.0"

[node name="Sword Chasing" type="Node" parent="StateChart/Root"]
script = ExtResource("5_ys267")

[node name="To Chill" type="Node" parent="StateChart/Root/Sword Chasing"]
script = ExtResource("6_0af0o")
to = NodePath("../../Chill")
event = &"player_escaped_vision"
delay_in_seconds = "0.0"

[node name="To Sword Spawning" type="Node" parent="StateChart/Root/Sword Chasing"]
script = ExtResource("6_0af0o")
to = NodePath("../../Sword Spawning")
event = &"finished_the_chase"
delay_in_seconds = "0.0"

[node name="Sword Spawning" type="Node" parent="StateChart/Root"]
script = ExtResource("5_ys267")

[node name="To Sword Chasing" type="Node" parent="StateChart/Root/Sword Spawning"]
script = ExtResource("6_0af0o")
to = NodePath("../../Sword Chasing")
event = &"finished_the_attack"
delay_in_seconds = "0.0"

[node name="Vision" type="Area2D" parent="."]
position = Vector2(0, -21)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_ky3ij")

[node name="Sword_Chase_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sword_Spawn_CD" type="Timer" parent="."]
wait_time = 2.6
one_shot = true

[node name="Sword_Spawn" type="Marker2D" parent="."]

[connection signal="state_processing" from="StateChart/Root" to="." method="_on_root_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Sword Chasing" to="." method="_on_sword_chasing_state_entered"]
[connection signal="state_processing" from="StateChart/Root/Sword Chasing" to="." method="_on_sword_chasing_state_processing"]
[connection signal="state_entered" from="StateChart/Root/Sword Spawning" to="." method="_on_sword_spawning_state_entered"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="timeout" from="Sword_Chase_Timer" to="." method="_on_sword_chase_timer_timeout"]
